infra/k8s/blog-client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-client
  template:
    metadata:
      labels:
        app: blog-client
    spec:
      containers:
        - name: blog-client
          image: adewaleijalana/blog-client
          resources:
            requests:
              memory: '512Mi'
              cpu: '1000m'
            limits:
              memory: '512Mi'
              cpu: '1000m'
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: blog-client-service
spec:
  type: ClusterIP
  selector:
    app: blog-client
  ports:
    - port: 3000
      targetPort: 3000
