infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: adewaleijalana/comments
          resources:
            requests:
              memory: '32Mi'
              cpu: '100m'
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - port: 4001
      name: comments
      protocol: TCP
      targetPort: 4001
