infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: adewaleijalana/event-bus
          resources:
            requests:
              memory: '32Mi'
              cpu: '100m'
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 4005

---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
  - port: 4005
    name: event-bus
    protocol: TCP
    targetPort: 4005
