infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: adewaleijalana/moderation
          resources:
            requests:
              memory: '32Mi'
              cpu: '100m'
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - port: 4003
      name: moderation
      protocol: TCP
      targetPort: 4003
