infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: adewaleijalana/query
          resources:
            requests:
              memory: '32Mi'
              cpu: '100m'
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - port: 4002
      name: query
      protocol: TCP
      targetPort: 4002
